@@ -10,3 +10,4 @@ $(ARCHDIR)/interrupt.o \
 $(ARCHDIR)/isr_wrapper.o \
 $(ARCHDIR)/irq.o \
 $(ARCHDIR)/gdt.o \
+$(ARCHDIR)/registers.o \
