@@ -1,0 +1,56 @@
+/*
+ * registers.c
+ *
+ * i386 Architecture-specific registers manipulation.
+ */
+
+#include "registers.h"
+
+#define LOG_MODULE "regs"
+
+// ============================================================================
+// ----------------------------------------------------------------------------
+// ============================================================================
+
+#define DECL_write_reg(name) \
+	inline void write_##name(reg_t reg) \
+	{\
+		asm volatile("mov %0, %%eax\n" \
+					 "mov %%eax, %%" #name \
+					 : /* no output */ \
+					 : "a"(reg)); \
+	}
+
+// ----------------------------------------------------------------------------
+
+#define DECL_read_reg(name) \
+	inline reg_t read_##name(void) \
+	{\
+		reg_t reg; \
+		asm volatile("mov %%" #name ", %%eax\n" \
+					 "mov %%eax, %0" \
+					 : "=a"(reg)); \
+		return reg; \
+	}
+
+// ============================================================================
+// ----------------------------------------------------------------------------
+// ============================================================================
+
+DECL_write_reg(cr0);
+DECL_read_reg(cr0);
+
+// no cr1 declaration (intel reserved)
+
+// cr2 is "read only"
+DECL_read_reg(cr2);
+
+DECL_write_reg(cr3);
+DECL_read_reg(cr3);
+
+DECL_write_reg(cr4);
+DECL_read_reg(cr4);
+
+// ============================================================================
+// ----------------------------------------------------------------------------
+// ============================================================================
