@@ -78,4 +78,19 @@ typedef union
 // ----------------------------------------------------------------------------
 // ============================================================================
 
+void write_cr0(reg_t reg);
+reg_t read_cr0(void);
+
+reg_t read_cr2(void);
+
+void write_cr3(reg_t reg);
+reg_t read_cr3(void);
+
+void write_cr4(reg_t reg);
+reg_t read_cr4(void);
+
+// ============================================================================
+// ----------------------------------------------------------------------------
+// ============================================================================
+
 #endif /* !ARCH_I386_REGISTERS_H_ */
